# maskara-ts

./: .gitattributes  .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
assets/: config.json  maskara_int8.zst
src/: api.rs  decode.rs  engine.rs  index.ts  lib.rs  tokenizer.rs  types.ts  window.rs
