[package]
name = "mascara"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.17", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2.16.13"
candle-core = "0.8.0"
candle-nn = "0.8.0"
candle-transformers = "0.8.0"
tokenizers = "0.19.1"
zstd = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
anyhow = "1.0"

[build-dependencies]
napi-build = "2.3.2"
